@@ -1,0 +1,15 @@
+package io.airlift.configuration;
+
+import java.lang.annotation.ElementType;
+import java.lang.annotation.Retention;
+import java.lang.annotation.RetentionPolicy;
+import java.lang.annotation.Target;
+
+/*
+ * Configuration setting that should be hidden when printing configuration summary.
+ * Must be on same method as @Config
+ */
+@Retention(RetentionPolicy.RUNTIME)
+@Target(ElementType.METHOD)
+public @interface ConfigHidden {
+}
